using UnityEngine;

public static class Constants
{
    public static readonly int SpeedHash = Animator.StringToHash("Speed");
    public static readonly int AttackHash = Animator.StringToHash("Attack");
    public static readonly int ComboHash = Animator.StringToHash("Combo");
    public static readonly string PlayerSwordTag = "PlayerSword";
}
